Adding JetBrainsMono as nerd font variation

--- a/run_once_02-install-fonts.sh.tmpl
+++ b/run_once_02-install-fonts.sh.tmpl
@@ -4,7 +4,7 @@
 set -eufo pipefail
 
 # List of Nerd Fonts font to install
-nerdfonts_fonts=(UbuntuMono Hack)
+nerdfonts_fonts=(UbuntuMono Hack JetBrainsMono)
 # List of urls to download font, supported files can be .ttf or .zip
 font_urls=(
   https://ftp.gnu.org/gnu/unifont/unifont-14.0.01/unifont-14.0.01.ttf
